--- a/src/assets/style-vars.scss
+++ b/src/assets/style-vars.scss
@@ -20,7 +20,7 @@
         --default-bg-hover: transparentize($default-color, .9);
         --default-color-hover: lighten($default-color, 30%);
         --default-border-color: lighten($default-color, 68%);
-        --very-specific-light-color: rgba(0,0,0,.05);
+        --very-specific-light-color: rgba(0,0,0,.1);
         --icon-button-color: rgba(42, 67, 90, 0.9);
 
         --valid-color: #00C853;
